<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
            android:id="@+id/navigation_beranda"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/title_beranda"/>

    <item
            android:id="@+id/navigation_pengaduan"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/title_pengaduan"/>
    <item
            android:id="@+id/navigation_profil"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/title_profil"/>
    <item
            android:id="@+id/navigation_lainnya"
            android:icon="@drawable/ic_notifications_black_24dp"
            android:title="@string/title_lainnya"/>
</menu>
