<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".ui.ui.Login">

    <!-- Login progress -->
    <ProgressBar
            android:id="@+id/login_progress"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:visibility="gone"/>

    <ScrollView
            android:id="@+id/login_form"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

        <LinearLayout
                android:id="@+id/email_login_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <AutoCompleteTextView
                        android:id="@+id/email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_email"
                        android:inputType="textEmailAddress"
                        android:maxLines="1"
                        android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                <EditText
                        android:id="@+id/password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/prompt_password"
                        android:imeActionId="6"
                        android:imeActionLabel="@string/action_sign_in_short"
                        android:imeOptions="actionUnspecified"
                        android:inputType="textPassword"
                        android:maxLines="1"
                        android:singleLine="true"/>

            </android.support.design.widget.TextInputLayout>

            <Button
                    android:id="@+id/login"
                    style="?android:textAppearanceSmall"
                    android:background="@color/colorAccent"
                    android:layout_width="300dp"
                    android:layout_marginLeft="38dp"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="Login"
                    android:textColor="@color/white"
                    android:textSize="20dp"
                    android:textStyle="bold"/>

            <!--<TextView-->
            <!--android:id="@+id/resetpasswordpengaduan"-->
            <!--android:text="RESET PASSWORD"-->
            <!--android:layout_marginLeft="10dp"-->
            <!--android:layout_below="@+id/login"-->
            <!--android:textSize="15dp"-->
            <!--android:layout_marginTop="10dp"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="wrap_content"/>-->

            <TextView
                    android:id="@+id/signuppengaduan"
                    android:text="SIGN UP"
                    android:layout_below="@+id/login"
                    android:textSize="15dp"
                    android:layout_marginLeft="260dp"
                    android:layout_marginTop="15dp"
                    android:textColor="@color/colorPrimary"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

        </LinearLayout>



    </ScrollView>

</RelativeLayout>